--- a/TP4/docs/00-ejercicio1.tex
+++ b/TP4/docs/00-ejercicio1.tex
@@ -19,7 +19,7 @@
             \includegraphics[width=1\linewidth]{pic/00-ejercicio1/thumbnail.png}\\
             \captionsetup{font={scriptsize}}
             \captionsetup{labelformat=empty}
-            \caption{https://www.youtube.com/watch?v=X2C-ouZ1_7g}
+            \caption{\href{https://www.youtube.com/watch?v=X2C-ouZ1_7g}{https://www.youtube.com/watch?v=X2C-ouZ1\_7g}}
         \end{figure}
         }
     \end{multicols}
