--- a/TP4/docs/01-introduccion.tex
+++ b/TP4/docs/01-introduccion.tex
@@ -8,7 +8,7 @@
         \item 100 partículas posicionadas horizontalmente una al lado de la otra con resortes entre ellas.
         \item Todas las partículas cuentan con la misma masa.
         \item Solo una partícula, la número 100, se mueve sin considerar la fuerza ejercida por las otras.
-        \item Las partículas tienen un movimiento estrictamente vertical.
+        \item Las partículas tienen un movimiento principalmente vertical.
     \end{itemize}
 \end{frame}
 
