--- a/TP4/docs/00-ejercicio1.tex
+++ b/TP4/docs/00-ejercicio1.tex
@@ -16,10 +16,11 @@
         % Second column with the "animation" image
         \begin{figure}[H]
             \centering
-            \includegraphics[width=1\linewidth]{pic/00-ejercicio1/thumbnail.png}\\
+            \includegraphics[width=1\linewidth]{pic/00-ejercicio1/thumbnail}\\
             \captionsetup{font={scriptsize}}
             \captionsetup{labelformat=empty}
             \caption{\href{https://www.youtube.com/watch?v=X2C-ouZ1_7g}{https://www.youtube.com/watch?v=X2C-ouZ1\_7g}}
+            \label{fig:oscilador_amortiguado_animation}
         \end{figure}
         }
     \end{multicols}
@@ -29,21 +30,24 @@
 \begin{frame}{Oscilador Amortiguado}
     \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/todos.png}
+        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/todos}
+        \label{fig:osc_amortiguado}
     \end{figure}
 \end{frame}
 
 \begin{frame}{Oscilador Amortiguado}
     \begin{figure}[htbp]
         \centering
-        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/zoom.png}
+        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/zoom}
+        \label{fig:osciladore-zoom}
     \end{figure}
 \end{frame}
 
 \begin{frame}{Oscilador Amortiguado}
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/ECMs.png}\label{fig:osciladore-ECM}
+        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/ECMs}
+        \label{fig:osciladore-ECM}
     \end{figure}
 \end{frame}
 
