--- a/TP4/docs/01-introduccion.tex
+++ b/TP4/docs/01-introduccion.tex
@@ -17,6 +17,7 @@
         \begin{figure}
             \centering
             \includegraphics[width=0.8\linewidth]{pic/01-introduccion/diagrama}
+            \label{fig:diagrama}
         \end{figure}
     \end{block}
 \end{frame}
