--- a/TP4/docs/03-implementacion.tex
+++ b/TP4/docs/03-implementacion.tex
@@ -11,7 +11,7 @@
     Utilizando Verlet
     \footnotesize{
         \begin{algorithmic}
-            \While{\text{$t$ < $t_{max}$}}
+            \While{\text{$t$ < $t_{\max}$}}
                 \State \text{Calcular fuerza sobre particula 1}
                 \State \text{Calcular fuerzas sobre particulas 2 a N-1}
                 \State \text{Actualizar posiciones y velocidades de las particulas 1 a N-1}
