--- a/TP4/docs/05-resultados.tex
+++ b/TP4/docs/05-resultados.tex
@@ -6,7 +6,7 @@
             \begin{itemize}
                 \item $k = 100\ kg/s^2$
                 \item $\omega \in [5, 15]$
-                \item $dt = \min(10^{-3}, \frac{1}{100*\omega})$
+                \item $dt = \min\left(10^{-3}, \frac{1}{100*\omega}\right)$
             \end{itemize}
         \end{block}
     \end{minipage}
