--- a/TP4/docs/01-introduccion.tex
+++ b/TP4/docs/01-introduccion.tex
@@ -12,15 +12,15 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Introducción}
-    \begin{block}{Diagrama:}
-        \begin{figure}
-            \centering
-            \includegraphics[width=0.8\linewidth]{pic/01-introduccion/diagrama}
-            \label{fig:diagrama}
-        \end{figure}
-    \end{block}
-\end{frame}
+% \begin{frame}{Introducción}
+%     \begin{block}{Diagrama:}
+%         \begin{figure}
+%             \centering
+%             \includegraphics[width=0.8\linewidth]{pic/01-introduccion/diagrama}
+%             \label{fig:diagrama}
+%         \end{figure}
+%     \end{block}
+% \end{frame}
 
 \begin{frame}{Utilizando Verlet en los pasos temporales}
     \textbf{Fórmulas:}
