--- a/TP4/docs/01-introduccion.tex
+++ b/TP4/docs/01-introduccion.tex
@@ -47,7 +47,7 @@
     \end{block}
 
     \begin{block}{Partícula 100}
-        Siempre seguirá el movimiento: \begin{equation*}A\ sin(\omega t)\end{equation*}
+        Siempre seguirá el movimiento: \begin{equation*} y_{100}=A\ sin(\omega t)\end{equation*}
     \end{block}
 \end{frame}
 
