--- a/TP4/docs/04-simulaciones.tex
+++ b/TP4/docs/04-simulaciones.tex
@@ -31,7 +31,7 @@
     \begin{block}{Amplitud de oscilación del sistema}
         \text{La máxima amplitud que alcanza cualquier partícula del sistema en un instante de tiempo.}
         \begin{equation*}
-            H(t) = \max \left\{\ r_i(t) : 1 \leq i \leq N\ \right\}
+            H(t) = \max \left\{\ y_i(t) : 1 \leq i \leq N\ \right\}
         \end{equation*}
     \end{block}
 
@@ -48,7 +48,7 @@
     \begin{block}{Frecuencia de resonancia}
         \text{Frecuencia angular en la que el sistema alcanza la máxima amplitud de oscilación.}
         \begin{equation*}
-            \omega_{0} = \omega\ /\ H_{max}(\omega) \geq H_{max}(\omega_2),\ \forall\omega_2
+            \omega_{0} = \omega\ :\ H_{max}(\omega) \geq H_{max}(\omega_2),\ \forall\omega_2
         \end{equation*}
     \end{block}
 
