--- a/TP4/docs/06-conclusiones.tex
+++ b/TP4/docs/06-conclusiones.tex
@@ -3,9 +3,8 @@
 \begin{frame}{Conclusiones}
     \Large{
     \begin{itemize}
-        \item Para el sistema amortiguado el esquema Gear Five ofrece un menor error.
+        \item A medida que la frecuencia tiende a la frecuencia de resonancia, la máxima amplitud de oscilación del sistema aumenta.
         \item Se cumple la relación $\omega_0 \propto \sqrt{k}$
-        \item La amplitud del sistema es periódica.
     \end{itemize}
     }
 \end{frame}
