--- a/TP4/docs/00-ejercicio1.tex
+++ b/TP4/docs/00-ejercicio1.tex
@@ -1,4 +1,4 @@
-\section{Ejercicio 1}\label{sec:ejercicio1}
+\section{Oscilador Puntual Amortiguado}\label{sec:ejercicio1}
 
 \begin{frame}{Oscilador Amortiguado}
     \begin{multicols}{2}
