chore: final fixes

--- a/TP4/docs/05-resultados.tex
+++ b/TP4/docs/05-resultados.tex
@@ -22,8 +22,7 @@
     \end{minipage}
 \end{frame}
 
-\begin{frame}{Osciladores acoplados}
-    \textbf{Amplitud de oscilación del sistema}
+\begin{frame}{Amplitud de oscilación del sistema}
     \begin{minipage}[c]{0.8\linewidth}
         \begin{figure}[H]
             \centering
@@ -36,8 +35,7 @@
     \end{minipage}
 \end{frame}
 
-\begin{frame}{Osciladores acoplados}
-    \textbf{Máxima amplitud de oscilación del sistema}
+\begin{frame}{Máxima amplitud de oscilación del sistema}
     \begin{minipage}[c]{0.7\linewidth}
         \begin{figure}[H]
             \centering
