--- a/TP5/docs/04-simulaciones.tex
+++ b/TP5/docs/04-simulaciones.tex
@@ -1,1 +1,29 @@
 \section{Simulación}\label{sec:simulacion}
+\begin{frame}{Parámetros del sistema}
+    \begin{block}{Parámetros fijos}
+        \begin{itemize}
+            \item .
+        \end{itemize}
+    \end{block}
+    \begin{block}{Parámetros variables}
+        \begin{itemize}
+            \item .
+        \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}{Esquema del sistema}
+    \begin{center}
+    \begin{minipage}{0.65\textwidth}
+        \includegraphics[width=\textwidth]{pic/04-simulaciones/esquema-field}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.3\textwidth}
+        \includegraphics[width=\textwidth]{pic/04-simulaciones/esquema-particula}
+    \end{minipage}
+\end{center}
+\end{frame}
+
+\begin{frame}{Observables}
+
+\end{frame}
