--- a/TP5/docs/04-simulaciones.tex
+++ b/TP5/docs/04-simulaciones.tex
@@ -30,26 +30,26 @@
     \end{center}
 \end{frame}
 
-\begin{frame}{Heurísticas}
-    \begin{block}{Jugadores azules - Defensores}
-        \small{\text{Su dirección objetivo es la posición del jugador rojo (atacante).}}
-        \begin{equation*}
-            \mathbf{e}_{target}^{azul\ j} = \mathbf{x}_{rojo} - \mathbf{x}_{azul\ j}
-        \end{equation*}
-    \end{block}
-    \begin{block}{Jugador rojo - Atacante}
-        \small{
-            \text{Su heurística está determinada por CPM modificado, ya que debe llegar a su posición objetivo}
-            \text{principal \textit{in-goal} y al mismo tiempo evitar a los jugadores azules.}
-        }
-        \begin{equation*}
-            \begin{aligned}
-                \mathbf{n_c}_{azul\ j}^{rojo} = A_p e^{-\frac{d_{rojo,j}}{B_p}} &&& \mathbf{n_c}^{rojo} = \sum_{j=1}^{N_j} \mathbf{n_c}_{azul\ j}^{rojo} \\
-                \mathbf{e}_{target}^{rojo} = \mathbf{x}_{goal} - \mathbf{x}_{rojo} &&& \mathbf{e}_{avoid}^{rojo} = \frac{\mathbf{n_c}^{rojo} + \mathbf{e}_{target}^{rojo}}{\left\| \mathbf{n_c}^{rojo} + \mathbf{e}_{target}^{rojo} \right\|}
-            \end{aligned}
-        \end{equation*}
-    \end{block}
-\end{frame}
+%\begin{frame}{Heurísticas}
+%    \begin{block}{Jugadores azules - Defensores}
+%        \small{\text{Su dirección objetivo es la posición del jugador rojo (atacante).}}
+%        \begin{equation*}
+%            \mathbf{e}_{target}^{azul\ j} = \mathbf{x}_{rojo} - \mathbf{x}_{azul\ j}
+%        \end{equation*}
+%    \end{block}
+%    \begin{block}{Jugador rojo - Atacante}
+%        \small{
+%            \text{Su heurística está determinada por CPM modificado, ya que debe llegar a su posición objetivo}
+%            \text{principal \textit{in-goal} y al mismo tiempo evitar a los jugadores azules.}
+%        }
+%        \begin{equation*}
+%            \begin{aligned}
+%                \mathbf{n_c}_{azul\ j}^{rojo} = A_p e^{-\frac{d_{rojo,j}}{B_p}} &&& \mathbf{n_c}^{rojo} = \sum_{j=1}^{N_j} \mathbf{n_c}_{azul\ j}^{rojo} \\
+%                \mathbf{e}_{target}^{rojo} = \mathbf{x}_{goal} - \mathbf{x}_{rojo} &&& \mathbf{e}_{avoid}^{rojo} = \frac{\mathbf{n_c}^{rojo} + \mathbf{e}_{target}^{rojo}}{\left\| \mathbf{n_c}^{rojo} + \mathbf{e}_{target}^{rojo} \right\|}
+%            \end{aligned}
+%        \end{equation*}
+%    \end{block}
+%\end{frame}
 
 \begin{frame}{Consideraciones}
     \begin{itemize}
