docs: wip report
Co-authored-by: AxelPreitiT <axel.preitit@gmail.com>
Co-authored-by: mauritobaez <mauroleanbaez@gmail.com>

--- a/TP5/docs/03-implementacion.tex
+++ b/TP5/docs/03-implementacion.tex
@@ -6,9 +6,8 @@
 \end{frame}
 
 \begin{frame}{Pseudocódigo}
-    \tiny{
+    \scriptsize{
         \begin{algorithmic}
-            \State \textbf{Simulación:}
             \State \text{Generar: campo, jugadores azules (uniformemente distribuidos) y jugador rojo}
             \While{\text{true}}
                 \For{\text{cada jugador}}
