--- a/TP5/docs/06-conclusiones.tex
+++ b/TP5/docs/06-conclusiones.tex
@@ -1,1 +1,10 @@
 \section{Conclusiones}\label{sec:conclusiones}
+
+\begin{frame}{Conclusiones}
+
+    \begin{itemize}
+        \item
+
+    \end{itemize}
+
+\end{frame}
