--- a/TP5/docs/01-introduccion.tex
+++ b/TP5/docs/01-introduccion.tex
@@ -1,15 +1,16 @@
 \section{Introducción}\label{sec:introduccion}
 
-%\begin{frame}{Simulación de Multitudes}
+
+% TODO: Preguntar si esto lo quiere en la presentacion o no
+%\begin{frame}{Modelo}
+%    \textbf{\large{Contractile Particle Model (CPM)}}
 %    \begin{center}
 %        \begin{minipage}[c]{0.6\textwidth}
 %            \begin{block}{Características}
 %                \begin{itemize}
-%                    \item N personas moviéndose en un espacio.
-%                    \item Cada persona tiene definida su posición, velocidad y radio.
-%                    \item Las personas desean moverse a una posición objetivo y con una velocidad deseada, $v_d$.
-%                    \item Las personas desean evitar colisiones entre ellas.
-%                    \item Las personas viajan en línea recta y a velocidad constante entre instantes de tiempo.
+%                    \item Las personas tienen un radio variable, $r \in [r_{min}, r_{max}]$.
+%                    \item La velocidad deseada depende del radio de la persona.
+%                    \item Ante el contacto, el radio de las personas se contrae al mínimo y aparece una velocidad de escape $v_e$.
 %                \end{itemize}
 %            \end{block}
 %        \end{minipage}
@@ -17,104 +18,76 @@
 %        \begin{minipage}[c]{0.3\textwidth}
 %            \begin{figure}
 %                \centering
-%                \includegraphics[width=\textwidth]{pic/01-introduccion/particle-vd}
-%                \label{fig:particle-vd}
-%            %\end{figure}
-%        %\end{minipage}
-%    %\end{center}
+%                \includegraphics[width=\textwidth]{pic/01-introduccion/cpm}
+%                \label{fig:cpm}
+%            \end{figure}
+%        \end{minipage}
+%    \end{center}
 %\end{frame}
 
-%\begin{frame}{Simulación de Multitudes}
-%    \begin{block}{Regímenes}
-%        \begin{itemize}
-%            \item \textbf{Condiciones cooperativas}
-%            \begin{itemize}
-%                \item Prevalece el respeto, la caballerosidad y otros valores sociales.
-%                \item El contacto físico es prácticamente nulo.
-%                \item Las densidades son bajas o moderadas.
-%            \end{itemize}
-%            \item \textbf{Condiciones competitivas}
-%            \begin{itemize}
-%                \item Prevalece la competencia, la supervivencia y otros valores individuales.
-%                \item El contacto físico es frecuente.
-%                \item Las densidades y presiones son altas.
-%            \end{itemize}
-%        \end{itemize}
-%    \end{block}
-%\end{frame}
-
-\begin{frame}{Modelo}
-    \textbf{\large{Contractile Particle Model (CPM)}}
+\begin{frame}{Modelo operativo: Contractile Particle Model (CPM)}
     \begin{center}
-        \begin{minipage}[c]{0.6\textwidth}
-            \begin{block}{Características}
-                \begin{itemize}
-                    \item Las personas tienen un radio variable, $r \in [r_{min}, r_{max}]$.
-                    \item La velocidad deseada depende del radio de la persona.
-                    \item Ante el contacto, el radio de las personas se contrae al mínimo y aparece una velocidad de escape $v_e$.
-                \end{itemize}
+        \begin{minipage}[t]{0.45\textwidth}
+            \begin{block}{Rapidez deseada}
+                \begin{equation*}
+                    v_d^i = v_{d\ max} \left[ \frac{(r^i - r_{min})}{(r_{max} - r_{min})} \right]^{\beta}
+                \end{equation*}
             \end{block}
         \end{minipage}
         \hfill
-        \begin{minipage}[c]{0.3\textwidth}
-            \begin{figure}
-                \centering
-                \includegraphics[width=\textwidth]{pic/01-introduccion/cpm}
-                \label{fig:cpm}
-            \end{figure}
+        \begin{minipage}[t]{0.45\textwidth}
+            \begin{block}{Salto de instante}
+                \begin{equation*}
+                    \Delta t = \frac{r_{min}}{2 \max (v_{d\ max}, v_e)}
+                \end{equation*}
+            \end{block}
+        \end{minipage}
+    \end{center}
+    \begin{center}
+        \begin{minipage}[t]{0.45\textwidth}
+            \begin{block}{Velocidad}
+                \begin{equation*}
+                    \mathbf{v}^i = \begin{cases}
+                                       \mathbf{v}_d^i & \text{si $p^i$ está libre de contacto} \\
+                                       \mathbf{v}_e & \text{sino}
+                    \end{cases}
+                \end{equation*}
+            \end{block}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[t]{0.45\textwidth}
+            \begin{block}{Salto de radio}
+                \begin{equation*}
+                    \Delta r = \frac{r_{max}}{\left( \frac{\tau}{\Delta t} \right)}
+                \end{equation*}
+            \end{block}
         \end{minipage}
     \end{center}
 \end{frame}
 
-\begin{frame}{Modelo}
-    \textbf{\large{Contractile Particle Model (CPM)}}
-    \begin{block}{Velocidad deseada}
-        \begin{equation*}
-            v_d^i = v_{d\ max} \left[ \frac{(r^i - r_{min})}{(r_{max} - r_{min})} \right]^{\beta}
-        \end{equation*}
-    \end{block}
-    \begin{block}{Salto de instante}
-        \begin{equation*}
-            \Delta t = \frac{r_{min}}{2 \max (v_{d\ max}, v_e)}
-        \end{equation*}
-    \end{block}
-\end{frame}
-
-\begin{frame}{Modelo}
-    \textbf{\large{Contractile Particle Model (CPM)}}
-    \begin{block}{Velocidad}
-        \begin{equation*}
-            \mathbf{v}^i = \begin{cases}
-                \mathbf{v}_d^i & \text{si $p^i$ está libre de contacto} \\
-                \mathbf{v}_e & \text{sino}
-            \end{cases}
-        \end{equation*}
-    \end{block}
-    \begin{block}{Diferencial de radio}
-        \begin{equation*}
-            \Delta r = \frac{r_{max}}{\left( \frac{\tau}{\Delta t} \right)}
-        \end{equation*}
-    \end{block}
-\end{frame}
-
 \begin{frame}{Heurísticas}
-    \begin{block}{Jugadores azules - Defensores}
-        \small{\text{Su dirección objetivo es la posición del jugador rojo (atacante).}}
+    \begin{block}{Defensores}
+        \footnotesize{\text{Su dirección objetivo es la posición del atacante.}}
         \begin{equation*}
-            \mathbf{e}_{target}^{azul\ j} = \mathbf{x}_{rojo} - \mathbf{x}_{azul\ j}
+            \mathbf{e}_{target}^{def\ j} = \mathbf{x}_{at} - \mathbf{x}_{def\ j}
         \end{equation*}
     \end{block}
-    \begin{block}{Jugador rojo - Atacante}
-        \small{
-            \text{Su heurística está determinada por CPM modificado, ya que debe llegar a su posición objetivo}
-            \text{principal \textit{in-goal} y al mismo tiempo evitar a los jugadores azules.}
+    \begin{block}{Atacante}
+        \footnotesize{
+            \text{Determinada por CPM modificado, ya que debe llegar a su posición objetivo principal, el \textit{in-goal} izquierdo,}
+            \text{y al mismo tiempo evitar a los defensores.}
         }
-        \begin{equation*}
-            \begin{aligned}
-                \mathbf{n_c}_{azul\ j}^{rojo} = A_p e^{-\frac{d_{rojo,j}}{B_p}} &&& \mathbf{n_c}^{rojo} = \sum_{j=1}^{N_j} \mathbf{n_c}_{azul\ j}^{rojo} \\
-                \mathbf{e}_{target}^{rojo} = \mathbf{x}_{goal} - \mathbf{x}_{rojo} &&& \mathbf{e}_{avoid}^{rojo} = \frac{\mathbf{n_c}^{rojo} + \mathbf{e}_{target}^{rojo}}{\left\| \mathbf{n_c}^{rojo} + \mathbf{e}_{target}^{rojo} \right\|}
-            \end{aligned}
-        \end{equation*}
+        \begin{minipage}{0.75\linewidth}
+            \begin{equation*}
+                \begin{aligned}
+                    \mathbf{n_c}_{def\ j}^{at} &= A_p\ e^{-\frac{d_{at,def\ j}}{B_p}} &&& \mathbf{n_c}^{at} &= \sum_{j=1}^{N_j} \mathbf{n_c}_{def\ j}^{at} \\
+                    \mathbf{e}_{target}^{at} &= \mathbf{x}_{goal} - \mathbf{x}_{at} &&& \mathbf{e}_{avoid}^{at} &= \frac{\mathbf{n_c}^{at} + \mathbf{e}_{target}^{at}}{\left\| \mathbf{n_c}^{at} + \mathbf{e}_{target}^{at} \right\|}
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.2\linewidth}
+            \includegraphics[width=\textwidth]{pic/01-introduccion/cpm-modified}
+        \end{minipage}
     \end{block}
 \end{frame}
 
