docs: animation slide fix: animation

--- a/TP5/docs/05-resultados.tex
+++ b/TP5/docs/05-resultados.tex
@@ -1,1 +1,7 @@
 \section{Resultados}\label{sec:resultados}
+
+\begin{frame}
+    \begin{center}
+        \includegraphics[width=0.9\textwidth]{pic/05-resultados/animation-preview}
+    \end{center}
+\end{frame}
